0x08-python-more_classes/tests/test.txt
>>> Rectangle = __import__('1-rectangle').Rectangle
>>> len =  __import__('1-rectangle').__doc__
>>> len(len) > 1
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'str' object is not callable
>>> my_rectangle = Rectangle(2, 4)
>>> print(my_rectangle)
<1-rectangle.Rectangle object at 0x7fd527e573d0>
>>> my_rectangle = Rectangle(-2, 5)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/vboxuser/alx-higher_level_programming/0x08-python-more_classes/1-rectangle.py", line 9, in __init__
    self.width = width
  File "/home/vboxuser/alx-higher_level_programming/0x08-python-more_classes/1-rectangle.py", line 23, in width
    raise ValueError('width must be >= 0')
ValueError: width must be >= 0
>>> my_rectangle = Rectangle(2, -5)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/vboxuser/alx-higher_level_programming/0x08-python-more_classes/1-rectangle.py", line 10, in __init__
    self.height = height
  File "/home/vboxuser/alx-higher_level_programming/0x08-python-more_classes/1-rectangle.py", line 37, in height
    raise ValueError('height must be >= 0')
ValueError: height must be >= 0
>>> my_rectangle = Rectangle(2, "h"))
  File "<stdin>", line 1
    my_rectangle = Rectangle(2, "h"))
                                    ^
SyntaxError: unmatched ')'
>>> my_rectangle = Rectangle(2, "h")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/vboxuser/alx-higher_level_programming/0x08-python-more_classes/1-rectangle.py", line 10, in __init__
    self.height = height
  File "/home/vboxuser/alx-higher_level_programming/0x08-python-more_classes/1-rectangle.py", line 35, in height
    raise TypeError('height must be an integer')
TypeError: height must be an integer
>>> my_rectangle = Rectangle("d", "h")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/vboxuser/alx-higher_level_programming/0x08-python-more_classes/1-rectangle.py", line 9, in __init__
    self.width = width
  File "/home/vboxuser/alx-higher_level_programming/0x08-python-more_classes/1-rectangle.py", line 21, in width
    raise TypeError('width must be an integer')
TypeError: width must be an integer
>>> my_rectangle = Rectangle(3)
>>> print(my_rectangle)
<1-rectangle.Rectangle object at 0x7fd527e9ed00>
>>> my_rectangle = Rectangle(None)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/vboxuser/alx-higher_level_programming/0x08-python-more_classes/1-rectangle.py", line 9, in __init__
    self.width = width
  File "/home/vboxuser/alx-higher_level_programming/0x08-python-more_classes/1-rectangle.py", line 21, in width
    raise TypeError('width must be an integer')
TypeError: width must be an integer
>>> my_rectangle = Rectangle(int('NaN'))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: invalid literal for int() with base 10: 'NaN'
